--- a/Ecart/Views/Home/Index.cshtml
+++ b/Ecart/Views/Home/Index.cshtml
@@ -81,20 +81,22 @@
                     <div class="hero__categories">
                         <div class="hero__categories__all">
                             <i class="fa fa-bars"></i>
-                            <span>All departments</span>
+                            <span>All Products</span>
                         </div>
                         <ul>
-                            <li><a href="#">Fresh Meat</a></li>
-                            <li><a href="#">Vegetables</a></li>
-                            <li><a href="#">Fruit & Nut Gifts</a></li>
-                            <li><a href="#">Fresh Berries</a></li>
-                            <li><a href="#">Ocean Foods</a></li>
                             <li><a href="#">Butter & Eggs</a></li>
-                            <li><a href="#">Fastfood</a></li>
-                            <li><a href="#">Fresh Onion</a></li>
-                            <li><a href="#">Papayaya & Crisps</a></li>
-                            <li><a href="#">Oatmeal</a></li>
-                            <li><a href="#">Fresh Bananas</a></li>
+                            <li><a href="#">Fresh Meat</a></li>
+                            <li><a href="#">Fruit & Nuts</a></li>
+                            <li><a href="#">Vegetables</a></li>
+                            <li><a href="#">Sea Foods</a></li>
+                            @*<li><a href="#">Fresh Berries</a></li>*@
+
+
+                            @*<li><a href="#">Fastfood</a></li>
+        <li><a href="#">Fresh Onion</a></li>
+        <li><a href="#">Papayaya & Crisps</a></li>
+        <li><a href="#">Oatmeal</a></li>
+        <li><a href="#">Fresh Bananas</a></li>*@
                         </ul>
                     </div>
                 </div>
@@ -182,10 +184,11 @@
                     <div class="featured__controls">
                         <ul>
                             <li class="active" data-filter="*">All</li>
-                            <li data-filter=".oranges">Oranges</li>
+                            <li data-filter=".oranges">Fruits</li>
                             <li data-filter=".fresh-meat">Fresh Meat</li>
                             <li data-filter=".vegetables">Vegetables</li>
-                            <li data-filter=".fastfood">Fastfood</li>
+                            <li data-filter=".fastfood">Pulses</li>
+
                         </ul>
                     </div>
                 </div>
@@ -202,8 +205,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Fresh Meat</a></h6>
+                            <h5>₹100.00/kg</h5>
                         </div>
                     </div>
                 </div>
@@ -218,8 +221,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Banana(Nendran)</a></h6>
+                            <h5>₹40.00/kg</h5>
                         </div>
                     </div>
                 </div>
@@ -234,8 +237,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Guava</a></h6>
+                            <h5>₹120.00/kg</h5>
                         </div>
                     </div>
                 </div>
@@ -250,8 +253,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Water Melon</a></h6>
+                            <h5>₹20.00/kg</h5>
                         </div>
                     </div>
                 </div>
@@ -266,8 +269,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Grapes</a></h6>
+                            <h5>₹100.00/kg</h5>
                         </div>
                     </div>
                 </div>
@@ -282,8 +285,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Chicken Burger</a></h6>
+                            <h5>₹90.00</h5>
                         </div>
                     </div>
                 </div>
@@ -298,8 +301,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Alphonso Mango</h6>
+                            <h5>₹130.00/kg</h5>
                         </div>
                     </div>
                 </div>
@@ -314,8 +317,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Apples</a></h6>
+                            <h5>₹140.00/kg</h5>
                         </div>
                     </div>
                 </div>
