test add product

--- a/Ecart/Views/CartItems/Index.cshtml
+++ b/Ecart/Views/CartItems/Index.cshtml
@@ -36,7 +36,7 @@
         <nav class="admin__sidepanel">
             <ul>
                 <li>
-                    <i class="fa fa-file-text-o"></i>Create Book
+                    <i class="fa fa-file-text-o"></i>Add Product
                 </li>
                 <li>
                     <i class="fa fa-pencil-square-o"></i>Modify Book
